# MSP

./: .gitignore  Makefile  New Text Document.txt  README.md  bfnet.model  changelog.md  index.html  requirements.txt  styleguide.md  upload_report.sh
.github/workflows/: docs.yml
benchmarks/indexes/: 190m_evaluate.sh  1d_evaluate.py  1d_evaluate.sh  1d_evaluate_partial.sh  2d_evaluate.py  staged_grid.sh
docs/: changelog.md
docs/report/: main.tex  refs.bib
examples/: 1d_evaluate.py  1d_large_eval.py  1d_sampled_evaluate.py  staged_grid_search.py
learning/: fully_connected_network.html  index.html  piecewise.html  polynomial_regression.html  pt_fcn.html
models/: index.html
models/experimental/: conv.html  index.html
models/lisa/: basemodel.html  index.html  lisa.html
models/ml/: index.html  polynomial_regression.html
models/nn/: bfnet.html  conv.html  fcn.html  index.html  pwlf_conv.html
models/rmi/: index.html  staged.html
playground/: KD_tree.py  Lisa_24th_Feb.ipynb  Lisa_25th_Feb.ipynb  Shard_Pred_8th_March.ipynb  Shard_Pred_8th_March.py  continuous_piecewise_linear.py  mem_size_tests.py  non_continuous_piecewise.py  pt_cnn_test.py
pretrained/: bfnet.model
report/: main.tex  refs.bib
src/inference/: CMakeLists.txt
src/inference/include/: constants.h  headers.h  item.cpp  item.h  store.cpp  store.h
src/inference/internal/indices/trees/b_tree/: btree.h  node.cpp  node.h
src/inference/internal/server/: handler.h  server.cpp  server.h  threadpool.h  worker.h
utilities/: dataloaders.html  index.html  metrics.html  results.html
(+156 files in other folders)
